# parties

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  vcpkg.json
.claude/agents/: graphics-engineer.md  network-security-engineer.md  principal-engineer.md  rmlui-layout-dev.md
.github/workflows/: ci.yml  release.yml
client/: CMakeLists.txt
client-ios/App/: VideoDecoderIOS.h  VideoDecoderIOS.mm
client-ios/Backends/: RmlUi_Backend_macOS_Metal.mm  RmlUi_Platform_macOS.h  RmlUi_Renderer_Metal.h  RmlUi_Renderer_Metal.mm
client/include/client/: app.h  app_core.h  audio_engine.h  auto_updater.h  lobby_model.h  net_client.h  rmlui_backend.h  screen_capture.h  server_list_model.h  settings.h  sound_player.h  stream_audio_capture.h  stream_audio_player.h  ui_manager.h  video_decoder.h  video_element.h  video_encoder.h  voice_mixer.h
client/res/: AppIcon.icns  Info.plist.in  app.manifest  app.rc.in
client/src/: RmlUi_RenderInterface_Extended.h  app.cpp  app_core.cpp  audio_engine.cpp  level_meter_element.cpp  lobby_model.cpp  main.cpp  miniaudio_impl.cpp  net_client.cpp  net_client_apple.mm  net_client_msquic.cpp  net_client_parsing.h  rmlui_backend.cpp  screen_capture.cpp  server_list_model.cpp  settings.cpp  sound_player.cpp  stream_audio_capture.cpp  stream_audio_player.cpp  ui_manager.cpp  video_decoder.cpp  video_element.cpp  video_encoder.cpp  voice_mixer.cpp
client/src/amd/: amf_decoder.cpp  amf_decoder.h  amf_encoder.cpp  amf_encoder.h  amf_loader.cpp  amf_loader.h
client/src/dx11/: RmlUi_Renderer_DX11.cpp  RmlUi_Renderer_DX11.h
client/src/dx12/: RmlUi_Include_DirectX_12.h  RmlUi_Renderer_DX12.cpp  RmlUi_Renderer_DX12.h  RmlUi_Renderer_DX12WL.cpp  RmlUi_Renderer_DX12WL.h
client/src/ios/: AppDelegate.h  AppDelegate.mm  Info.plist  Parties.entitlements  PartiesViewController.h  PrivacyInfo.xcprivacy  RmlUi_Backend_iOS_Metal.h  RmlUi_Backend_iOS_Metal.mm  RmlUi_Platform_iOS.h  RmlUi_Platform_iOS.mm  app_ios.mm  main.mm
client/src/macos/: PartiesAppDelegate.h  RmlUi_Platform_macOS.mm  app_macos.mm  main.mm  screen_capture_macos.h  screen_capture_macos.mm  video_encoder_macos.h  video_encoder_macos.mm
client/src/metal/: RmlUi_Backend_macOS_Metal.h  RmlUi_Renderer_Metal.h  RmlUi_Renderer_Metal.mm
client/src/nvidia/: nvdec_decoder.cpp  nvdec_decoder.h
client/src/windows/: RmlUi_Include_Windows.h  app.cpp  auto_updater.cpp  context_menu.cpp  main.cpp  screen_capture.cpp  stream_audio_capture.cpp  ui_manager.cpp  video_decoder.cpp  video_encoder.cpp
client/ui/: lobby.rml  style.rcss
common/: CMakeLists.txt
common/include/parties/: audio_common.h  codec.h  crash_reporter.h  crypto.h  log.h  net_common.h  permissions.h  protocol.h  quic_common.h  serialization.h  thread_queue.h  types.h  version.h  version.h.in  video_common.h
common/src/: codec.cpp  crash_reporter.cpp  crypto.cpp  log.cpp  net_common.cpp  permissions.cpp  protocol.cpp  quic_common.cpp  serialization.cpp
docs/: protocol.md
encdec/: CMakeLists.txt
encdec/include/encdec/: codec.h  decoder.h  encoder.h  factory.h
encdec/src/: factory.cpp
encdec/src/amd/: amf_decoder.cpp  amf_decoder.h  amf_encoder.cpp  amf_encoder.h  amf_loader.cpp  amf_loader.h
encdec/src/dav1d/: dav1d_decoder.cpp  dav1d_decoder.h
encdec/src/libhevc/: libhevc_decoder.cpp  libhevc_decoder.h
encdec/src/mft/: mft_decoder.cpp  mft_decoder.h  mft_encoder.cpp  mft_encoder.h
encdec/src/nvidia/: cuda_drvapi.h  nvdec_decoder.cpp  nvdec_decoder.h  nvenc_encoder.cpp  nvenc_encoder.h  nvidia_loader.cpp  nvidia_loader.h
encdec/src/openh264/: openh264_decoder.cpp  openh264_decoder.h  openh264_encoder.cpp  openh264_encoder.h
ports/argon2/: CMakeLists.txt  argon2-config.cmake.in  portfile.cmake  vcpkg.json
ports/dav1d/: dav1d-config.cmake  portfile.cmake  usage
ports/enet/: portfile.cmake  vcpkg.json
ports/msquic/: msquic-config.cmake  portfile.cmake  vcpkg.json
ports/rmlui/: portfile.cmake  vcpkg.json
ports/rnnoise/: CMakeLists.txt  portfile.cmake  rnnoise-config.cmake.in  vcpkg.json
ports/wolfssl/: portfile.cmake  vcpkg.json
server/: CMakeLists.txt
server/include/server/: auth.h  config.h  database.h  enet_server.h  quic_server.h  server.h  session.h  tls_server.h
server/res/: server.default.toml
server/src/: auth.cpp  config.cpp  database.cpp  enet_server.cpp  main.cpp  quic_server.cpp  server.cpp  session.cpp  tls_server.cpp
sounds/: generate.py
src/: main.c
tests/: CMakeLists.txt  integration_test.cpp
